--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <header>
         <nav>
             <ul>
-                <li>About Me</li>
-                <li>Hobbies</li>
-                <li>Contact</li>
+                <li><a href="#about-me">About Me</a></li>
+                <li><a href="#hobbies">Hobbies</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <h1>Obateru Itunu Profile Page</h1>
-        <section>
+        <section id="about-me">
             <h2>About Me</h2>
             <p>Eager and driven, I'm a budding web developer passionate about crafting clean, functional, and user-friendly digital experiences. Currently immersed in the world of HTML, CSS, and JavaScript, I'm excited to learn and grow, turning creative ideas into tangible web solutions. Let's build something amazing together!</p>
-            <img src="../Mini Project Assessment Personal Profile Page/DSC_5513.JPG" alt="Me during my NYSC camp training">
+            <img src="img/DSC_5513.JPG" alt="Me during my NYSC camp training" height="100px">
         </section>
-        <section>
+        <section id="hobbies">
             <h2>My Hobbies</h2>
             <ol>
                 <li>Reading</li>
@@ -31,7 +31,7 @@
             </ol>
         </section>
     </main>
-    <footer>
+    <footer id="contact">
         <h2>Contact</h2>
         <p>Contact me oon my number <em>08068959311</em> for any enquiries.</p>
     </footer>
