--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obateru Itunu Project Page</title>
+    <style>
+        img {
+            width: auto;
+            height: 100px;
+        }
+    </style>
 </head>
 <body>
     <header>
+        <h2>Obateru Itunu Profile Page</h2>
         <nav>
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -16,7 +23,6 @@
         </nav>
     </header>
     <main>
-        <h1>Obateru Itunu Profile Page</h1>
         <section id="about-me">
             <h2>About Me</h2>
             <p>Eager and driven, I'm a budding web developer passionate about crafting clean, functional, and user-friendly digital experiences. Currently immersed in the world of HTML, CSS, and JavaScript, I'm excited to learn and grow, turning creative ideas into tangible web solutions. Let's build something amazing together!</p>
