--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
         img {
             width: auto;
             height: 100px;
+            display: block;
         }
     </style>
 </head>
 <body>
     <header>
-        <h2>Obateru Itunu Profile Page</h2>
+        <h1>Obateru Itunu Profile Page</h1>
         <nav>
             <ul>
                 <li><a href="#about-me">About Me</a></li>
@@ -26,7 +27,7 @@
         <section id="about-me">
             <h2>About Me</h2>
             <p>Eager and driven, I'm a budding web developer passionate about crafting clean, functional, and user-friendly digital experiences. Currently immersed in the world of HTML, CSS, and JavaScript, I'm excited to learn and grow, turning creative ideas into tangible web solutions. Let's build something amazing together!</p>
-            <img src="img/DSC_5513.JPG" alt="Me during my NYSC camp training" height="100px">
+            <img src="https://unsplash.com/photos/a-person-holding-a-credit-card-at-a-counter-BA1olMZsytM" alt="A flower">
         </section>
         <section id="hobbies">
             <h2>My Hobbies</h2>
