--- a/index.html
+++ b/index.html
@@ -4,13 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obateru Itunu Project Page</title>
-    <style>
-        img {
-            width: auto;
-            height: 100px;
-            display: block;
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -38,10 +31,12 @@
             </ol>
         </section>
     </main>
-    <footer id="contact">
-        <h2>Contact</h2>
-        <p>Contact me oon my number <em>08068959311</em> for any enquiries.</p>
-        <p>Send us an email at <em>iobateru@gmail.com</em>.</p>
+    <footer>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Contact me oon my number <em>08068959311</em> for any enquiries.</p>
+            <p>Send us an email at <em>iobateru@gmail.com</em>.</p>
+        </section>
     </footer>
 </body>
 </html>
