--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
     <footer>
         <section id="contact">
             <h2>Contact</h2>
-            <p>Contact me oon my number <em>08068959311</em> for any enquiries.</p>
-            <p>Send us an email at <em>iobateru@gmail.com</em>.</p>
+            <address>
+                <p>Obateru Itunu</p>
+                <p>16, Alaafiatayo street</p>
+                <p>Irele, Ondo state</p>
+                <p>Nigeria</p>
+                <p>Email: <a href="mailto:iobateru@gmail.com">us online</a></p>
+                <p>Call us on <a href="tel:+2348068959311">08068959311</a></p>
+            </address>
         </section>
     </footer>
 </body>
