--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <h2>About Me</h2>
             <p>Eager and driven, I'm a budding web developer passionate about crafting clean, functional, and user-friendly digital experiences. Currently immersed in the world of HTML, CSS, and JavaScript, I'm excited to learn and grow, turning creative ideas into tangible web solutions. Let's build something amazing together!</p>
             <img src="https://images.unsplash.com/photo-1582794543139-8ac9cb0f7b11?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8Zmxvd2Vyc3xlbnwwfHwwfHx8MA%3D%3D" alt="Beatiful Flower" />
+        </section>
         <section id="hobbies">
             <h2>My Hobbies</h2>
             <ol>
